--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,11 +1,8 @@
-requests
+librosa>=0.7.2
+torch>=1.0
+matplotlib
+unidecode
+inflect
+nltk
 flask
-opencv-python
-Pillow
-keras==2.2.4
-keras-segmentation
-pyunpack
-tensorflow
-tqdm
-regex
-sentencepiece
+magenta
